[project]
name = "psftune"
version = "0.2.0rc1"
description = "Compare PSFs from an array telescope based on sidelobe behaviour"
authors = [
    {name = "Sphesihle Makhathini", email = "sphemakh@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=2.0",
    "click>=8.1.3",
    "matplotlib>=3.9",
    "astropy>=7.0",
]

[project.urls]
Homepage = "https://github.com/wits-cfa/psftune"
Repository = "https://github.com/wits-cfa/psftune"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
psftune = "psftune.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["psftune"]